--- a/base_project/src/app/components/footer-component/footer-component.component.html
+++ b/base_project/src/app/components/footer-component/footer-component.component.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4 text-lg-start">
-                Copyright &copy; Your Website 2021
+                Copyright &copy; Michel Farafay 2021
             </div>
             <div class="col-lg-4 my-3 my-lg-0">
                 <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
@@ -11,8 +11,9 @@
                 <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
             </div>
             <div class="col-lg-4 text-lg-end">
-                <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
-                <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
+                <a class="link-dark text-decoration-none me-3" href="#!">Politica de privacidad</a>
+                <a class="link-dark text-decoration-none me-3">-</a>
+                <a class="link-dark text-decoration-none" href="#!">Terminos de uso</a>
             </div>
         </div>
     </div>
