--- a/base_project/src/app/components/nav-component/nav-component.component.html
+++ b/base_project/src/app/components/nav-component/nav-component.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-        <a class="navbar-brand comforter" href="#page-top">~MARIO EZQUERRO</a>
+        <span class="navbar-brand comforter">MARIO EZQUERRO</span>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             Menu
@@ -8,6 +8,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link fw-bolder" routerLink="">Home</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link fw-bolder" href="#portfolio">Inventos</a>
                 </li>
