--- a/base_project/src/app/components/detalles-inventos-component/detalles-inventos-component.component.html
+++ b/base_project/src/app/components/detalles-inventos-component/detalles-inventos-component.component.html
@@ -5,7 +5,7 @@
    
     <div class="container text-center mt-5">
         <h2 class="section-heading text-uppercase">{{ invento?.nombre }}</h2>
-        <img class="img-fluid" [src]="invento?.img" />
+        <img class="img-max img-fluid" [src]="invento?.img" />
         <h4 class="section-subheading text-muted mt-3">Descripción</h4>
         <p class="portfolio-caption-subheading text-muted">{{ invento?.longDesc }}</p>   
     </div>
